--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
       ddl-auto: update
     show-sql: true
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:8080/likelion-db1
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:mysql://localhost:3306/db-exercise2
       username: root
       password: password
 
